# blimp_work

./: .gitignore  =4.10.0  =5.4.1  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/blimp_mpc_ros/lib/blimp_mpc_ros/: run_blimp_data  run_blimp_sim  run_cbf_circle_horz  run_cbf_circle_horz_spin  run_cbf_circle_vert  run_cbf_fig8_horz  run_cbf_fig8_vert_short  run_cbf_helix  (+31 more)
install/blimp_node_2/share/blimp_node_2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  single_agent_blimp.launch.xml
log/: latest_build  latest_list
src/blimp_mpc_ros/: blimp_dynamics_organized.mlx  cbf_fbl_paper_math.mlx  octave-workspace  setup.cfg  setup.py
src/blimp_mpc_ros/blimp_mpc_ros/: BlimpController.py  BlimpLogger.py  BlimpMPCNode.py  BlimpPlotter.py  BlimpSim.py  CtrlCBF.py  CtrlCBFCircleHorz.py  CtrlCBFHelix.py  CtrlCBFLine.py  CtrlCBFTriangle.py  CtrlCasadi.py  CtrlCasadiCircleHorz.py  CtrlCasadiHelix.py  CtrlCasadiLine.py  CtrlCasadiTriangle.py  CtrlFBL.py  CtrlFBLHelix.py  CtrlFBLLine.py  CtrlFBLTriangle.py  CtrlLQR.py  CtrlLQRHelix.py  CtrlLQRLine.py  CtrlLQRTriangle.py  CtrlMPC.py  CtrlMPCBox.py  CtrlMPCLine.py  CtrlRTACasadi.py  CtrlRTACasadiLine.py  CtrlWardi.py  CtrlWardiCircle.py  CtrlWardiCircleYaw.py  CtrlWardiHelix.py  CtrlWardiLine.py  CtrlWardiTriangle.py  GenerateOptimalTrajectory.py  HardwareWardiCircleHorz.py  HardwareWardiCircleVert.py  HardwareWardiCircleYaw.py  HardwareWardiFig8Horz.py  HardwareWardiFig8VertShort.py  (+87 more)
src/blimp_mpc_ros/logs/: data_analysis.ipynb  final_all_data_analysis.ipynb
(+411 files in other folders)
